# parquet-tools

./: .gitignore  CLAUDE.md  README.md  config.toml.example  mise.toml  pyproject.toml
.claude/agents/: plot-builder.md  schema-builder.md  signal-analyst.md
docs/: fw_naming_conventions.md
src/: derivatives.py  display.py  listalerts.py  loader.py  plot_server.py  schema.py  schema_interactive.py  timeutils.py  whatchanged.py  whenchanged.py
tests/: conftest.py  test_derivatives.py  test_schema.py  test_timeutils.py
